--- a/assets/css/sl.css
+++ b/assets/css/sl.css
@@ -189,8 +189,18 @@
 .sl-padding-2px-5px{
     padding: 2px 5px;
 }
-.sl-padding-2px-10px{
-    padding: 2px 10px;
+
+.sl-padding-02rem-08rem{
+    padding: .2rem .8rem;
+}
+.sl-margin-04rem-04rem-04rem-08rem{
+    margin: .4rem .4rem .4rem .8rem;
+}
+.sl-margin-04rem-08rem-04rem-04rem{
+    margin: .4rem .8rem .4rem .4rem;
+}
+.sl-padding-02rem-08rem{
+    padding: .2rem .8rem;
 }
 .sl-flex-row-center-center{
     display: flex;
@@ -232,6 +242,9 @@
 }
 .sl-padding-5px{
     padding: 5px;
+}
+.sl-padding-1rem{
+    padding: 1rem;
 }
 .sl-border-1px-solid-D3D3D3{
     border:1px solid #D3D3D3;
@@ -293,7 +306,10 @@
 }
 .sl-background-color-F1F1F1{
     background-color: #F1F1F1;
-}.
+}
+.sl-background-color-F6F6F6{
+     background-color: #F6F6F6;
+ }
  .sl-font-color-B8B8B8{
      color: #B8B8B8;
  }
@@ -302,4 +318,37 @@
 }
 .sl-font-weight-bolder{
     font-weight:bolder;
+}
+.sl-tab-panel{
+    margin:.5rem;
+    background-color: #f391a9;
+    padding: 0.2rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    border-radius: 0.3rem;
+}
+.sl-border{
+    padding: .2rem;
+}
+.sl-margin-05rem{
+    padding:0.5rem 0rem;
+}
+.sl-header{
+    color: red;
+    margin-left: 0.6rem;
+}
+.ls-button{
+    padding: 0.1rem 0.2rem;
+    color: white;
+    background-color: red;
+    font-size:12px;
+}
+.sl-width-33percent{
+    width: 33%;
+    text-align: center
+}
+.sl-width-33percent-align-right{
+    width: 33%;
+    text-align: right;
+    margin-right:0.4rem;
 }
