--- a/assets/css/amazeui.css
+++ b/assets/css/amazeui.css
@@ -9061,7 +9061,7 @@ TODO:
   vertical-align: middle;
   margin-left: auto;
   margin-right: auto;
-  width: 66%;
+  width: 270px;
   max-width: 100%;
   border-radius: 0;
   background: #f8f8f8;
